--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.4.6", features = ["derive"] }
 libc = "0.2.148"
 mmap = "0.1.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
