--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4.4.6", features = ["derive"] }
 libc = "0.2.148"
 mmap = "0.1.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
+statrs = "0.16.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
