--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tango = { path="../tango" }
+tango-bench = { path="../tango-bench" }
 
 [dev-dependencies]
 criterion = "0.5.1"
-ordsearch = { version = "0.2.*" }
-#, features = ["nightly"]
+ordsearch = { version = "0.2.*", features = ["nightly"] }
 
 [[bench]]
 name = "ordsearch"
