--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -17,6 +17,11 @@ libloading = "0.8.1"
 num-traits = "^0.2"
 rand = { version = "^0.8", features = ["small_rng"] }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+goblin = "^0.7"
+scroll = "^0.11"
+tempfile = "^3.8"
+
 [dev-dependencies]
 criterion = "^0.5"
 
