--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,15 +4,14 @@ on: push
 
 jobs:
   build:
-    # strategy:
-    #   matrix:
-    #     include:
-    #       - target: x86_64-unknown-linux-gnu
-    #         os: ubuntu-22.04
-    #       - target: x86_64-apple-darwin
-    #         os: macos-11
-    # runs-on: ${{ matrix.os }}
-    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-22.04
+          - target: x86_64-apple-darwin
+            os: macos-11
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
 
@@ -28,7 +27,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo
+          key: Cargo/${{ runner.os }}
 
       - name: Run Tests
         run: |
