Trying running banchmarks on GHA

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ Cargo.lock
 **/*.rs.bk
 *.svg
 /graphs
-/.*
 /rust-toolchain.toml
 /*.csv
 .ipynb_checkpoints
 /local
+/.fleet
+/.vscode
+/.ttr.yaml
