--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,9 @@ jobs:
       - name: Install Rust
         run: rustup update stable && rustup default stable
 
+      - name: Install Cargo Export
+        run: cargo install cargo-export --version 0.2.0
+
       - name: Restore ./target
         uses: actions/cache@v3
         with:
@@ -33,8 +36,25 @@ jobs:
         run: |
           cargo test
 
+      - name: Exporting Branch Benchmarks
+        run: cargo export target/benchmarks -- bench --bench=tango
+
+      - name: Switching to Master
+        uses: actions/checkout@v3
+        with:
+          ref: dev
+          path: main-branch
+
+      - name: Exporting Main Benchmarks
+        working-directory: main-branch
+        run: cargo export target/benchmarks -- bench --bench=tango
+
       - name: Run Benchmarks
-        run: cargo bench -q --bench=tango -- compare | tee -a target/benchmark.txt
+        run: |
+          set -eo pipefail
+
+          target/benchmarks/tango compare main-branch/target/benchmarks/tango -v -t 1000 --fail-threshold 10 \
+            | tee target/benchmark.txt
 
       - name: Archive Benchmarks Results
         uses: actions/upload-artifact@v3
