--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["benchmarks", "performance"]
 
 [dependencies]
 clap = { version = "^4.4", features = ["derive"] }
+colorz = { version = "^1.1", features = ["supports-color"] }
 libloading = "^0.8"
 num-traits = "^0.2"
 rand = { version = "^0.8", features = ["small_rng"] }
