ordsearch testing scripts updates

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -9,7 +9,7 @@ rand = { version = "^0.8", features = ["small_rng"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
-ordsearch = { version = "0.2.*", features = ["nightly"] }
+ordsearch = { version = "^0.2", features = ["nightly"] }
 num-traits = "^0.2"
 
 [[bench]]
