Trying out align

--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -26,7 +26,7 @@ jobs:
           key: Bench/${{ runner.os }}
 
       - name: Building Benchmarks
-        run: cargo export target/benchmarks -- bench --bench='search-*'
+        run: cargo export target/benchmarks -- bench --bench='search-*' --features=align
 
       - name: Run Benchmarks
         run: |
@@ -34,7 +34,7 @@ jobs:
 
           mkdir -p target/dumps
           target/benchmarks/search_ord --color=never compare target/benchmarks/search_ord \
-            -t 1 -d target/dumps | tee target/benchmark.txt
+            -t 0.5 -d target/dumps | tee target/benchmark.txt
 
       - uses: actions/upload-artifact@v3
         with:
