Several runs to check if process spawn is helping

--- a/.github/workflows/bench.yaml
+++ b/.github/workflows/bench.yaml
@@ -35,6 +35,8 @@ jobs:
           mkdir -p target/dumps
           target/benchmarks/search_ord --color=never compare target/benchmarks/search_ord \
             -t 0.5 -d target/dumps | tee target/benchmark.txt
+          target/benchmarks/search_ord --color=never compare target/benchmarks/search_ord \
+            -t 0.5 -d target/dumps | tee -a target/benchmark.txt
 
       - uses: actions/upload-artifact@v3
         with:
