--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 tango-bench = { path="../tango-bench" }
-rand = { version = "^0.8", features = ["small_rng"] }
+rand = { version = "0.8", features = ["small_rng"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
-ordsearch = { version = "^0.2", features = ["nightly"] }
-num-traits = "^0.2"
+ordsearch = { version = "0.2.5", features = ["nightly"] }
+num-traits = "0.2"
 
 [[bench]]
 name = "search-ord"
