--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -12,19 +12,19 @@ categories = ["development-tools", "development-tools::profiling"]
 keywords = ["benchmarks", "performance"]
 
 [dependencies]
-anyhow = "^1.0"
-clap = { version = "^4.4", features = ["derive"] }
-colorz = { version = "^1.1", features = ["supports-color"] }
-glob-match = "^0.2"
-libloading = "^0.8"
-num-traits = "^0.2"
-rand = { version = "^0.8", features = ["small_rng"] }
-thiserror = "^1.0"
+anyhow = "1.0.75"
+clap = { version = "4.4.11", features = ["derive"] }
+colorz = { version = "1.1", features = ["supports-color"] }
+glob-match = "0.2"
+libloading = "0.8"
+num-traits = "0.2"
+rand = { version = "0.8", features = ["small_rng"] }
+thiserror = "1.0.50"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-goblin = "^0.7"
-scroll = "^0.11"
-tempfile = "^3.8"
+goblin = "0.7.1"
+scroll = "0.11"
+tempfile = "3.8"
 
 [features]
 align = []
