--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.4.11", features = ["derive"] }
 colorz = { version = "1.1", features = ["supports-color"] }
 glob-match = "0.2"
 libloading = "0.8"
+log = "0.4.20"
 num-traits = "0.2"
 rand = { version = "0.8", features = ["small_rng"] }
 thiserror = "1.0.50"
