--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,8 @@ jobs:
         run: cargo fmt -- --check --color always
       - name: Running clippy
         run: cargo clippy --all-targets --all-features -p tango-bench
+      - name: Typo
+        uses: crate-ci/typos@master
   test:
     strategy:
       matrix:
