--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,15 +11,12 @@ jobs:
         with:
           components: "clippy, rustfmt"
       - uses: Swatinem/rust-cache@v2
-      - name: Checking formatting
-        run: cargo fmt -- --check --color always
-        continue-on-error: true
       - name: Running clippy
         run: cargo clippy --all-targets --all-features -p tango-bench -- -D warnings
-        continue-on-error: true
+      - name: Checking formatting
+        run: cargo fmt -- --check --color always
       - name: Typo
         uses: crate-ci/typos@master
-        continue-on-error: true
   test:
     strategy:
       matrix:
@@ -37,7 +34,7 @@ jobs:
         run: cargo test
 
   bench:
-    needs: [test, lint]
+    needs: [test]
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
