Adding test reproducing issue

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -37,6 +37,10 @@ name = "tango-async"
 harness = false
 required-features = ["async-tokio"]
 
+[[bench]]
+name = "panicking"
+harness = false
+
 [features]
 prefetch = ["ordsearch/nightly"]
 align = []
