--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -33,6 +33,7 @@ tempfile = "3.8"
 hw-timer = []
 async = []
 async-tokio = ['async', 'dep:tokio']
+async-tokio-time = ["async-tokio", "tokio/time"]
 
 [[bench]]
 name = "tango"
