--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,6 +11,7 @@ rand = { version = "0.8", features = ["small_rng"] }
 [dev-dependencies]
 ordsearch = { version = "0.2.5" }
 num-traits = "0.2"
+tokio = { version = "1.37.0", features = ["rt", "time"] }
 
 [[bench]]
 name = "search-ord"
@@ -35,7 +36,7 @@ harness = false
 [[bench]]
 name = "tango-async"
 harness = false
-required-features = ["async-tokio"]
+required-features = ["async-tokio", "async-tokio-time"]
 
 [[bench]]
 name = "panicking"
@@ -45,3 +46,4 @@ harness = false
 prefetch = ["ordsearch/nightly"]
 align = []
 async-tokio = []
+async-tokio-time = []
