--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -32,8 +32,8 @@ tempfile = "3.8"
 [features]
 hw-timer = []
 async = []
-async-tokio = ['async', 'dep:tokio']
-async-tokio-time = ["async-tokio", "tokio/time"]
+async-tokio = ["async", "dep:tokio"]
+async-tokio-all-drivers = ["async-tokio", "tokio/full"]
 
 [[bench]]
 name = "tango"
