--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -23,6 +23,7 @@ rand = { version = "0.8", features = ["small_rng"] }
 thiserror = "1.0.50"
 alloca = "0.4"
 tokio = { version = "1.37.0", features = ["rt"], optional = true }
+libc = "0.2.177"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 goblin = "0.7.1"
