--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -26,7 +26,7 @@ tokio = { version = "1.37.0", features = ["rt"], optional = true }
 libc = "0.2.177"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_System_Time"] }
+windows = { version = "0.62.2", features = ["Win32_System_Threading"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 goblin = "0.7.1"
