--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -24,6 +24,15 @@ thiserror = "1.0.50"
 alloca = "0.4"
 tokio = { version = "1.37.0", features = ["rt"], optional = true }
 
+# Required for getrusage()
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+libc = "0.2.177"
+
+# Required for GetProcessTimes
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.62.2", features = ["Win32_System_Threading"] }
+
+# Required for ELF patching
 [target.'cfg(target_os = "linux")'.dependencies]
 goblin = "0.7.1"
 scroll = "0.11"
