--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,10 +36,17 @@ jobs:
 
   bench:
     needs: [test]
-    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-22.04
+          - os: macos-14
+          - os: windows-2022
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
+      # Doing checkout 2 times for a current branch and then baseline-branch
+      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           ref: dev
           path: baseline-branch
@@ -56,13 +63,18 @@ jobs:
           cargo export target/benchmarks -- bench --bench=tango
 
       - name: Run Benchmarks
+        shell: bash
         run: |
           set -eo pipefail
 
-          target/benchmarks/tango --color=never compare baseline-branch/target/benchmarks/tango \
+          if [[ "$RUNNER_OS" == "Windows" ]]; then
+            EXT=.exe
+          fi
+
+          target/benchmarks/tango${EXT} --color=never compare baseline-branch/target/benchmarks/tango${EXT} \
             -v -t 1 --fail-threshold 10 | tee target/benchmark.txt
 
       - uses: actions/upload-artifact@v4
         with:
-          name: benchmark.txt
+          name: benchmark-${{ matrix.os }}.txt
           path: target/benchmark.txt
