--- a/tango-bench/Cargo.toml
+++ b/tango-bench/Cargo.toml
@@ -28,9 +28,16 @@ tokio = { version = "1.37.0", features = ["rt"], optional = true }
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 libc = "0.2.177"
 
-# Required for GetProcessTimes
+# Required for GetProcessTimes and IAT patching
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.62.2", features = ["Win32_System_Threading"] }
+windows = { version = "0.62.2", features = [
+    "Win32_System_Threading",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Memory",
+    "Win32_System_SystemServices",
+    "Win32_System_SystemInformation",
+] }
 
 # Required for ELF patching
 [target.'cfg(target_os = "linux")'.dependencies]
