Trying new release pipeline

--- a/tango-bench/release.toml
+++ b/tango-bench/release.toml
@@ -1,7 +1,6 @@
-allow-branch = ["main", "dev"]
+allow-branch = ["main", "*"]
 release = true
-tag = true
-tag-name = "v{{version}}"
+tag = false
 
 pre-release-replacements = [
     {
